# goit_web_HW8

./: .gitignore  README.md  Search_Mongo.py  config.ini  pyproject.toml  requirements.txt
Conf/: db.py  db_mongo.py  models.py  seed.py
Mongo/: Search_Mongo.py  authors.json  models.py  seed.py
RabbitMQ/: Models_RMQ.py  consumer.py  producer.py
