[tool.poetry]
name = "goit-web-hw8"
version = "0.1.0"
description = ""
authors = ["Andriy414414 <133632261+Andriy414414@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
